--- a/about.html
+++ b/about.html
@@ -10,23 +10,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fahkwang:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a11972d74a.js" crossorigin="anonymous"></script>
-    <title>Joel Warwick Portfolio</title>
+    <title>About Joel</title>
 </head>
 <body>
-    
+
         <nav>
             <a class="logo" href=""></a>
             <ul>
               <li><a href="work.html">Work</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="resume.html">Resume</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
-        <div class="bg-color-change"><p>c</p></div>
+          <div class="bg-color-change"><p>c</p></div>
+
+          <img id="headshot" itemprop="image" src="assets/img/Prof-Headshot B&W-cropped.jpg" alt="Headshot">
         
         <section id="content">
-            <h1>Hi, I'm Joel</h1>
+            <h1>About Me</h1>
             <h2>Lorem ipsum odor amet, consectetuer adipiscing elit. 
                 Sem potenti phasellus sodales ridiculus nam ipsum. Tortor proin laoreet curabitur 
                 id vel mus quis. Enim rutrum praesent facilisis auctor at eleifend habitant eget. 
@@ -34,13 +36,12 @@
             </h2>
         </section>
 
-
-<footer class="primary">
-    <ul id="links">
-        <li><a rel="me" title="GitHub" href="https://github.com/jwarwick03" target="_blank"><i class="fa-brands fa-github" style="color: #454545;"></i></a></li>
-        <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
-    </ul>
-</footer>
+        <footer class="primary">
+            <ul id="links">
+                <li><a rel="me" title="GitHub" href="https://github.com/jwarwick03" target="_blank"><i class="fa-brands fa-github" style="color: #454545;"></i></a></li>
+                <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
+            </ul>
+        </footer>
 
 </body>
 </html>
