--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <title>About Joel</title>
 </head>
 <body>
-
+    <main class="grid">
         <nav>
             <a class="logo" href=""></a>
             <ul>
@@ -25,9 +25,10 @@
           </nav>
           <div class="bg-color-change"><p>c</p></div>
 
+          <div class="color-block"></div>
           <img id="headshot" itemprop="image" src="assets/img/Prof-Headshot B&W-cropped.jpg" alt="Headshot">
         
-        <section id="content">
+        <section id="content" class="about-me">
             <h1>About Me</h1>
             <h2>Lorem ipsum odor amet, consectetuer adipiscing elit. 
                 Sem potenti phasellus sodales ridiculus nam ipsum. Tortor proin laoreet curabitur 
@@ -42,6 +43,6 @@
                 <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
             </ul>
         </footer>
-
+    </main>
 </body>
 </html>
