--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <title>Contact Joel</title>
 </head>
 <body>
+    <main class="grid">
         <nav>
             <a class="logo" href=""></a>
             <ul>
@@ -39,6 +40,6 @@
                 <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
             </ul>
         </footer>
-
+    </main>
 </body>
 </html>
