--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Joel Warwick Portfolio</title>
 </head>
 <body>
-    
+    <main class="grid">
         <nav>
             <a class="logo" href=""></a>
             <ul>
@@ -27,10 +27,11 @@
         
         <section id="content">
             <h1>Hi, I'm Joel</h1>
-            <h2>Lorem ipsum odor amet, consectetuer adipiscing elit. 
-                Sem potenti phasellus sodales ridiculus nam ipsum. Tortor proin laoreet curabitur 
-                id vel mus quis. Enim rutrum praesent facilisis auctor at eleifend habitant eget. 
-                Tristique id dictum venenatis enim praesent neque sollicitudin tortor.
+            <h2>A student web designer who loves creating websites that are 
+                both attractive and easy to use. I enjoy mixing creativity with 
+                practical design to make each project look great and feel intuitive. 
+                I’m always learning and excited to bring new ideas to the table. 
+                Let’s make something great together!
             </h2>
         </section>
 
@@ -41,6 +42,7 @@
         <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
     </ul>
 </footer>
+</main>
 
 </body>
 </html>
