--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <title>My Work</title>
 </head>
 <body>
-    
+  <main class="grid">
         <nav>
             <a class="logo" href=""></a>
             <ul>
@@ -33,23 +33,29 @@
                   <label for="first">Websites</label>
                   <div class="content">
                     <h3><a href="https://jwarwick03.github.io/it-garnet/parks/index.html" target="_blank">State Park Website</a></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                       elit. Doloremque rerum a dolorem </p>
+                    <p>This was a website I made individually for the second semester in my 
+                      IT Minor class. It helped me develop my HTML and CSS skills and I 
+                      learned what to do and not to do. </p>
                     <h3><a href="https://jwarwick03.github.io/ifsc-3342/final-project/index.html" target="_blank">Workout Website</a></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                       elit. Doloremque rerum a dolorem </p>
+                    <p>This website was my final in my Mobile Web Development class. 
+                      I used the "mobile first" aproach to building this website and 
+                      it helped me see why I should or shouldn't use this aproach. </p>
                   </div>
                 </li>
                 <li>
                     <input type="radio" name="accordion" id="second">
                     <label for="second">Written Skills</label>
                     <div class="content">
-                      <h3><a href="assets/files/Joel Warwick Phil Essay .pdf" target="_blank">Philosophy Essay</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                         consectetur adipisicing elit. Doloremque rerum a dolorem </p>
-                      <h3><a href="assets/files/American Lit Paper.pdf" target="_blank">American Lit Paper</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                         consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                      <h3><a href="assets/files/Joel Warwick Phil Essay .pdf" rel="Philosophy Essay" target="_blank">Philosophy Essay</a></h3>
+                      <p>This was an essay I wrote for my philosophy class that I took in 2022. 
+                        It helped develop my writing skills along with using/citing sources 
+                        to support my argument. </p>
+                      <h3><a href="assets/files/American Lit Paper.pdf" rel="American Lit Paper" target="_blank">American Lit Paper</a></h3>
+                      <p>This was a paper for my American Literacy class in 2022. 
+                        I had to write about a piece of historical literature and 
+                        explain what it was about. It helped me with being able to 
+                        put my thoughts in words about a certain story. This paper 
+                        enabled creativity along with critical thinking. </p>
                     </div>
                   </li>
                   <li>
@@ -57,33 +63,42 @@
                     <label for="third">Soft Skills</label>
                     <div class="content">
                       <h3><a href="assets/files/Sub-Specs - Marketing Project.pdf" target="_blank">Marketing Project</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                         consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                      <p>This was an assignment for a business class where I had to 
+                        come up with a product and present it. This took a lot of 
+                        creativity. </p>
                       <h3><a href="assets/files/Final Speech Portfolio.pdf" target="_blank">Speech Portfolio</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                         consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                      <p>This was the final portfolio for my speech class that goes 
+                        over all the speeches I had to give. It shows the public 
+                        speaking I had to do and the class helped me become more 
+                        comfortable with presentations. </p>
                     </div>
                   <li>
                     <input type="radio" name="accordion" id="fourth">
                     <label for="fourth">Programming</label>
                     <div class="content">
                      <h3><a href="https://jwarwick03.github.io/it-garnet/currency-value-history/index.html" target="_blank">Currency Value History</a></h3>
-                     <p>Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                     <p>This was a programming asignment for my IT Minor class. 
+                      It involved using Javascript to show the value of a currency 
+                      at a specific date in time. This gave me some good practice 
+                      with Javascript. </p>
                      <h3><a href="https://jwarwick03.github.io/it-garnet/calculator/index.html" target="_blank">Javascript Calculator</a></h3>
-                     <p>Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                     <p>Another programming assignment for IT Minor that involved 
+                      Javascript. It is a simple calculator that allows you to do a 
+                      basic calculation of two numbers. This also helped me learn 
+                      some basic Javascript. </p>
                     </div>
                   <li>
                     <input type="radio" name="accordion" id="fifth">
                     <label for="fifth">Database</label>
                     <div class="content">
                       <h3><a href="https://jwarwick03.github.io/it-garnet/form-assignment/index.html" target="_blank">Patient Form</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                      <p>This was an assignment from my IT Minor class that involved 
+                        building a form that would send data to a database. It was a 
+                        great learning experience for backend development. </p>
                       <h3><a href="https://jwarwick03.github.io/it-garnet/Mars-Rover-Photo-Explorer/index.html" target="_blank">Mars Rover Photo Explorer</a></h3>
-                      <p>Lorem ipsum dolor sit amet 
-                        consectetur adipisicing elit. Doloremque rerum a dolorem </p>
+                      <p>Another project for IT Minor that was based on using API's to 
+                        retrieve data to display. It was very helpful in giving me knowledge 
+                        on API's and how to use them. </p>
                     </div>
             </ul>
         
@@ -96,7 +111,7 @@
               <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
           </ul>
       </footer>
-
+  </main>
 
 </body>
 </html>
