--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,14 @@
           </nav>
           <div class="bg-color-change"><p>c</p></div>
         
-        <section id="content">
-            <h1>Hi, I'm Joel</h1>
-            <h2>Lorem ipsum odor amet, consectetuer adipiscing elit. 
-                Sem potenti phasellus sodales ridiculus nam ipsum. Tortor proin laoreet curabitur 
-                id vel mus quis. Enim rutrum praesent facilisis auctor at eleifend habitant eget. 
-                Tristique id dictum venenatis enim praesent neque sollicitudin tortor.
-            </h2>
+        <section id="content" class="contact">
+            <h1>Contact</h1>
+            <h2>Personal Email:</h2>
+            <h3>jewarwick03@gmail.com</h3>
+            <h2>School Email:</h2>
+            <h3>jwarwick@ualr.edu</h3>
+            <h2>Phone:</h2>
+            <h3>501.772.7232</h3>
         </section>
 
         <footer class="primary">
