--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
           </nav>
           <div class="bg-color-change"><p>c</p></div>
         
-        <section id="content">
+        <section id="content" class="resume-content">
             <h1>Resume</h1>
             <h2>I am currently a student at University of Arkansas Little Rock and majoring in web design & development while minoring in Information Technology.
             </h2>
@@ -45,7 +45,7 @@
           <dd>jewarwick03@gmail.com</dd>
         </dl>
 
-        <h2>Skills</h2>
+        <h2 class="resume">Skills</h2>
         <div class="skill">
           <div class="skill-name">HTML</div>
           <div class="skill-bar">
@@ -65,7 +65,7 @@
           </div>
         </div>        
 
-        <h2>Education</h2>
+        <h2 class="resume">Education</h2>
         <article class="certificate" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
           <h3 itemprop="description"><abbr title="Master of Science">BA</abbr> Web Design and Development</h3>
           <span itemprop="name">University of Arkansas at Little Rock</span>
@@ -79,18 +79,18 @@
           <span>Fall 2021-Spring 2023</span>
         </article>
 
-        <h2>Experience</h2>
+        <h2 class="resume">Experience</h2>
         <!-- current job -->
         <article class="job">
           <h3 itemprop="jobTitle">Office Administration</h3>
           <div itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-            <span itemprop="name">Fence World</span>
+            <span itemprop="name">Fence World |</span>
+            <a itemprop="url" href="https://www.fenceworldar.com/">Company URL</a>
+              <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+              <span itemprop="addressLocality">| Mabelvale, AR |</span>
             <span>August 2023 - Present</span>
             <p itemprop="description">Office management work such as, creating invoices, checking voicemails, document organization, ect.</p>
             <span itemprop="location" itemscope itemtype="http://schema.org/Place">
-              <a itemprop="url" href="https://www.fenceworldar.com/">Company URL</a>
-              <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-              <span itemprop="addressLocality">Mabelvale, AR</span>
             </span>
             </span>
           </div>
@@ -99,10 +99,10 @@
         <article class="job no-border-bottom" itemscope itemtype="http://schema.org/Organization">
           <h3 itemprop="name">Retail employee</h3>
           <span itemprop="location" itemscope itemtype="http://schema.org/Place">
-              <span itemprop="name">Sanders Ace Hardware</span>
+              <span itemprop="name">Sanders Ace Hardware |</span>
           <a itemprop="url" href="https://www.acehardware.com/">Company URL</a>
           <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                <span itemprop="addressLocality">Little Rock, AR</span>
+                <span itemprop="addressLocality">| Little Rock, AR</span>
           </span>
           </span>
           <div itemscope itemtype="https://schema.org/EmployeeRole">
@@ -112,15 +112,16 @@
           <p itemprop="description">Customer assistance, running register on occasion, stocking inventory, ect.</p>
         </article>
 
-      <h2 class="resume-section"><a href="">PDF Resume Link</a></h2>
       </section>
-      </main>
+      
 <footer class="primary">
   <ul id="links">
       <li><a rel="me" title="GitHub" href="https://github.com/jwarwick03" target="_blank"><i class="fa-brands fa-github" style="color: #454545;"></i></a></li>
       <li><a rel="me" title="LinkedIn" href="https://www.linkedin.com/in/joel-warwick-0a8b94295/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #454545;"></i></a></li>
+      <li><a rel="me" title="PDF Resume" href="assets/files/Joel Warwick - Resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf" style="color: #454545"></i></a></li>
   </ul>
 </footer>
+</main>
 
 </body>
 </html>
