--- a/about.html
+++ b/about.html
@@ -30,11 +30,10 @@
         
         <section id="content" class="about-me">
             <h1>About Me</h1>
-            <h2>Lorem ipsum odor amet, consectetuer adipiscing elit. 
-                Sem potenti phasellus sodales ridiculus nam ipsum. Tortor proin laoreet curabitur 
-                id vel mus quis. Enim rutrum praesent facilisis auctor at eleifend habitant eget. 
-                Tristique id dictum venenatis enim praesent neque sollicitudin tortor.
-            </h2>
+            <h3>I am a twenty-one year old student at UALR who has a passion for web design. I have a desire to keep learning and growing as I continue my education and I know I have already grown a lot in just a short amount of time.
+            </h3>
+            <h2>What I like to do:</h2>
+            <h3>There's almost nothing I love to do more than spend time with friends. I also love photography, working out, watching films, and reading. I am also very involved in my church and love getting to serve and spend time with my community.</h3>
         </section>
 
         <footer class="primary">
